[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultracoustics"
version = "0.1.0"
description = "Ultracoustics device SDK"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyusb>=1.3.1",
    "libusb1>=3.1.0",
    "pyserial>=3.5",
]

[tool.setuptools.packages.find]
include = ["ultracoustics*"]

[tool.setuptools.package-data]
"ultracoustics._internal" = ["bin/*.dll"]
